# multi_agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
agents/: postgres_agent.py  root_agent.py  search_agent.py  vector_db_agent.py  weather_agent.py
app/: api.py  ingest.py  main.py  start.py
app/data/: python_faq_dataset.csv
app/utils/: checkpointer.py  context_window.py  load_embedding_model.py  load_llm.py  sources.py
docs/: architecture.puml
graph/postgres/: postgres_graph.py
graph/prompts/: postgres_prompt.py  root_promp.py  search_prompt.py  vector_db_prompt.py  weather_prompt.py
graph/root/: root_graph.py
graph/search/: search_graph.py
graph/states/: postgres_state.py  root_state.py  search_state.py  vector_db_state.py  weather_state.py
graph/vector_db/: vector_db_graph.py
graph/weather/: weather_grapy.py
tests/: test_api.py  test_checkpointer.py  test_context_window.py  test_load_embedding_model.py  test_load_llm_context.py  test_postgres_tool_node.py  test_postgresql_exec.py  test_root_agent_tools.py  test_root_sources.py  test_root_tool_node.py  test_search_agent_results.py  test_search_tools.py  test_tool_collections.py  test_weather_tools.py
tools/postgres/: init.sql  pg_hba.conf  posgresql_exec.py  postgres_tools.py
tools/root/: call_postgre_agent.py  call_search_agent.py  call_vector_db_agent.py  call_weather_agent.py  delegation.py  root_tools.py
tools/search/: search_tools.py  (+1 more)
ui/: .dockerignore  Dockerfile  README.md  angular.json  nginx.conf  package-lock.json  package.json
(+26 files in other folders)
