[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "langchain>=1.3.14",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.5",
    "langchain-qdrant>=1.1.0",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.9",
    "langgraph-checkpoint-postgres>=3.0.0",
    "pandas>=3.0.3",
    "psycopg[binary]>=3.2.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "sqlalchemy>=2.0.51",
    "sqlglot>=30.12.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.12.4",
]

[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = [
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
